<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ SPDX-FileCopyrightText: 2025 Swiss Confederation
  ~
  ~ SPDX-License-Identifier: MIT
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/>
    </parent>

    <groupId>ch.admin.bj.swiyu</groupId>
    <artifactId>swiyu-issuer-parent</artifactId>
    <version>1.2.0-SNAPSHOT</version>
    <name>Swiyu issuer parent pom</name>
    <description>Generic issuer for public beta</description>

    <packaging>pom</packaging>

    <modules>
        <module>issuer-service</module>
        <module>issuer-application</module>
    </modules>


    <properties>
        <java.version>21</java.version>
        <maven.compiler.proc>full</maven.compiler.proc>
        <sonar.jacoco.itReportPath>${project.basedir}/issuer-application/target/jacoco-it.exec
        </sonar.jacoco.itReportPath>
        <sonar.jacoco.reportPath>${project.basedir}/issuer-application/target/jacoco.exec</sonar.jacoco.reportPath>
        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
        <javacrumbs.shedlock.version>6.0.2</javacrumbs.shedlock.version>
        <archunit-junit5.verion>1.3.0</archunit-junit5.verion>
        <nimbus-jose-jwt.version>9.40</nimbus-jose-jwt.version>
        <bouncycastle.version>1.80</bouncycastle.version>
        <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
        <springdoc-openapi-starter-webmvc-ui.version>2.7.0</springdoc-openapi-starter-webmvc-ui.version>
        <openapi-generator-maven-plugin.version>7.7.0</openapi-generator-maven-plugin.version>
        <spring-cloud-dependencies.version>2024.0.0</spring-cloud-dependencies.version>
        <maven-checkstyle-plugin.version>3.6.0</maven-checkstyle-plugin.version>
        <editorconfig-maven-plugin.version>0.1.3</editorconfig-maven-plugin.version>
        <primus-jce.version>2.4.4</primus-jce.version>
        <skip.doc-generate>true</skip.doc-generate>
        <sonar.issue.ignore.multicriteria.e1.ruleKey>xml:S3422</sonar.issue.ignore.multicriteria.e1.ruleKey>
        <sonar.issue.ignore.multicriteria.e1.resourceKey>**/pom.xml</sonar.issue.ignore.multicriteria.e1.resourceKey>
        <spring-doc.version>2.8.8</spring-doc.version>
        <authlete.version>1.4</authlete.version>
        <springframework.cloud.version>2024.0.0</springframework.cloud.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <build>
        <plugins>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                            <goal>prepare-agent-integration</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>